# ChangeLog for sci-biology/diya
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/diya/ChangeLog,v 1.1 2009/09/28 00:16:02 weaver Exp $

*diya-1.0_rc4 (27 Sep 2009)

  27 Sep 2009; Andrey Kislyuk <weaver@gentoo.org> +metadata.xml,
  +diya-1.0_rc4.ebuild:
  New package, ebuild written by me
