@@ -1,4 +1,14 @@
-DIST diya-1.0-rc4.tar.gz 386706 RMD160 1548c83b9e7130bd8dc8407f51ea7a50848499bd SHA1 90c9ad6f1cd69fe814b74eaa1cdbce56e34e74bb SHA256 13f7dd4dd7f96143948587884954e337552d7491347c2c174e786824880590c7
-EBUILD diya-1.0_rc4.ebuild 1355 RMD160 3e97919a99a7e56ff12a97ed0dc1440ea1c49c87 SHA1 2d6298d218b5a854094e6924e0a9e784d906f0bb SHA256 443c9c9e77f8d3bf1b16cc88c3ffb53a582d164b595f6a65eb941c6e44fa5db3
-MISC ChangeLog 360 RMD160 128ea0c392f91e2a45836cd8c02aebb57884259d SHA1 58f067012e5e6c8d1424f372e37554c14c7ee794 SHA256 81c3f06feb36d034eae1c7a846bfaea33e50a8d3b739ad637461cb85e520e8bf
-MISC metadata.xml 259 RMD160 d9d81b67d635fabd81aef8ae0edf971211ae9072 SHA1 8e32f751c67ff891fa35405a2cf6fb33752d6eb1 SHA256 541c3fbcf299d9a8ccf4132ee61f9e53a5d737cefdaa6fdc77764d8d4c7f3110
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST diya-1.0-rc4.tar.gz 386706 SHA256 13f7dd4dd7f96143948587884954e337552d7491347c2c174e786824880590c7
+EBUILD diya-1.0_rc4.ebuild 1355 SHA256 443c9c9e77f8d3bf1b16cc88c3ffb53a582d164b595f6a65eb941c6e44fa5db3 SHA512 ae270d46bf6b6477c262f615d1ababf383fa3a83b79a3237f1975238c7517b51de2265a24e62a0ecf079567fd754d7a8255d270a817de5bda0c51f90a8da178a WHIRLPOOL 57a52c3cfb940f4c713e67ac00d677a64f5dce0ab32af38764a310f6dcd2c9c4e4ec3b8955a0f4282bdc265fb4f0bacf71a59cfd34893b126500c9773ad6c232
+MISC ChangeLog 498 SHA256 86b2c1c87590bb2adb95fb86c53b73a0714f8e68d6ad3eeca7428bbc4b60b2ef SHA512 12bfd2a64d173ab8000763a84fa8ac3dc2638800de7a935086d72bd1e9825bc41e7591ced8154c28e4d7a2181b1cdd0bdeb9a8ae1b9be8bb542e452f6a579b0a WHIRLPOOL b2a00337f4718ad81633d497b5c581d96e004f119a03985590de615d0928b7264a09747176a717de318f5c83092aa9259bfefe429ee8bf2f48fb46815a714aee
+MISC metadata.xml 166 SHA256 29b228f683c71345323d841414e410c929a320f34536eb30910498728260c8ac SHA512 51c5345bb1c4466b73e2feac8895c64fc119365e7f2c156702f4c93664d3aba028b3da9daaabf24f61a88220345fca7806771a252e8ae906cac5dec97862c7e0 WHIRLPOOL 211bf955d94fc1d93b12388a2c597a8d440fb5d78f84d59b2549569537098c3525b1fbab707441d62fabe20edcac2fd9ebe09c5d9870f1c9558d7ee90d5db5b3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlE98ggACgkQgAnW8HDreRbtpgCeJDmRv6cpgmapcoavJOr3qevb
+XW4An1zU+1PcNgSBzZh+rMvmdrb4dido
+=CoeF
+-----END PGP SIGNATURE-----
