@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/diya
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/diya/ChangeLog,v 1.1 2009/09/28 00:16:02 weaver Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/diya/ChangeLog,v 1.2 2013/03/11 15:02:31 jlec Exp $
+
+  11 Mar 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Drop Andrey as maintainer so that bugs get assigned to sci-biology directly
 
 *diya-1.0_rc4 (27 Sep 2009)
 
